--- a/Academics.html
+++ b/Academics.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/top.navbar.css">
     <link rel="stylesheet" href="css/academics.menubtn.css">
@@ -13,112 +13,7 @@
     <link rel="stylesheet" href="css/faq.dropdown.css">
     <link rel="stylesheet" href="css/faq.tooltip.css">
     <link rel="stylesheet" href="css/credit.css">
-    <style>
-        li {
-            padding: 5px;
-        }
-
-        body {
-            font-size: large;
-        }
-
-
-        /* HIDE SCROLLBAR */
-        ::-webkit-scrollbar {
-            display: none;
-        }
-    </style>
-
-    <style>
-        table,
-        th,
-        td {
-            border: 2px solid rgba(31, 106, 168, 0);
-            border-radius: 10px;
-        }
-
-        td {
-            min-width: 200px;
-        }
-
-        .parent-wrap {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            gap: 16px;
-            margin: auto;
-            width: 95%;
-            max-width: 500px;
-        }
-
-        .link-logo:hover {
-            transform: translateY(-5px);
-            transition: transform 1s
-        }
-
-        /* .container-6 {
-            display: grid;
-            place-items: center;
-            grid-template-columns: auto auto auto;
-            border-radius: 15px;
-            padding: 10px;
-            margin: 20px auto;
-            width: 79%;
-            max-width: 350px;
-            position: relative;
-            column-gap: 30px;
-            row-gap: 12%;
-        } */
-
-        .container-6 {
-            display: flex;
-            flex-wrap: wrap;
-            /* place-items: center; */
-            /* grid-template-columns: auto auto auto; */
-            justify-content: center;
-            border-radius: 15px;
-            padding: 10px;
-            margin: 20px auto;
-            width: 80%;
-            max-width: 600px;
-            /*the button visibility*/
-            position: relative;
-            column-gap: 30px;
-            row-gap: 12%;
-        }
-
-        .container-6 a:hover {
-            transform: translateY(-5px);
-            transition: transform 1s
-        }
-
-        /* .container-6>div {
-            background-color: #f1f1f1;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 30px;
-            text-align: center;
-        }  */
-
-        .container-6>div>div {
-            background-color: #f1f1f1;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 30px;
-            text-align: center;
-            /* margin-top: 50px; */
-
-        }
-
-        /* .container-5,.my-div {
-            box-shadow:
-                -4px 0px 5px -4px rgba(0, 0, 0, 0.3),
-                4px 0px 5px -4px rgba(0, 0, 0, 0.3);
-        } */
-    </style>
-
-
-
+    <link rel="stylesheet" href="css/Academics.css">
 
 </head>
 
@@ -147,7 +42,7 @@
 
 
         <div id="upload-section" class="container-5"
-            style=";border-radius: 15px;background-color: #1B262C;margin-top: 25px;margin: auto;">
+            style="border-radius: 15px;background-color: #1B262C;margin-top: 25px;margin: auto;">
 
 
             <p style="text-align: center;color: #ffffffcd;margin-top: -5px;margin-bottom: -5px;">Feeling generous?</p>
@@ -211,39 +106,39 @@
                     <div class="container-6"
                         style="background-color: #00000000;margin: auto;justify-content: center;column-gap: 10%;">
 
-                        <div class="menu-button" id="menuButton1" align="center"
-                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
-                            <p class="cell-link" align="center" style="color: rgb(255, 255, 255);padding:10px">
+                        <div class="menu-button" id="menuButton1" 
+                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;max-width: 300px;">
+                            <p class="cell-link"  style="color: rgb(255, 255, 255);margin:auto;">
                                 Notice</b>
                             </p>
                         </div>
                         
                         <div class="menu-button" id="menuButton2" align="center"
-                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;max-width: 300px;">
                             <p class="cell-link" align="center"
-                                style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                                style="color: rgb(255, 255, 255);margin:auto;background-color: #00000000;">
                                 Class Routine
                             </p>
                         </div>
 
                         <div class="menu-button" id="menuButton3" align="center"
-                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;max-width: 300px;">
                             <p class="cell-link" align="center"
-                                style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                                style="color: rgb(255, 255, 255);margin:auto;background-color: #00000000;">
                                 Drive by Dept.
                             </p>
                         </div>
                         <div class="menu-button" id="menuButton4" align="center"
-                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;max-width: 300px;">
                             <p class="cell-link" align="center"
-                                style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                                style="color: rgb(255, 255, 255);margin:auto;background-color: #00000000;">
                                 Questions
                             </p>
                         </div>
                         <div class="menu-button" id="menuButton5" align="center"
-                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                            style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;max-width: 300px;">
                             <p class="cell-link" align="center"
-                                style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                                style="color: rgb(255, 255, 255);margin:auto;background-color: #00000000;">
                                 Courses
                             </p>
                         </div>
@@ -252,7 +147,7 @@
                             <a class="cell-link"
                                 href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
                                 target="_blank"
-                                style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                                style="color: rgb(255, 255, 255);margin:auto;background-color: #00000000;">
                                 Task Materials
                             </a>
 
