--- a/D1/S05.html
+++ b/D1/S05.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../css/styles.css">
-  <link rel="manifest" href="../../manifest.webmanifest">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="manifest" href="../manifest.webmanifest">
   <title>
-    UITS S04
+    UITS S05
   </title>
 </head>
 
@@ -17,8 +17,8 @@
   <div class="topnav-1">
     <!-- APK LINK -->
     <!-- <div class="navigation1"
-      style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-    <script src="../../apk-link.js"></script> -->
+            style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+        <script src="../../apk-link.js"></script> -->
 
     <a class="active-1" href="../Tutorials.html">
       <small>Resources<br>Tutorials</small>
@@ -54,6 +54,7 @@
 
 
 
+
   <!-- BOTTOM BAR "navbar" -->
 
   <div style="padding-left:16px">
@@ -67,12 +68,12 @@
   <!-- ----------------------------------------------------------------------- -->
 
   <br>
+
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="https://drive.google.com/drive/folders/1_ihH9qW1qBSPKn_cHzf6w6cRUcYEE3Zr?usp=drive_link"
-          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 4th
-          Semester
+        <a href="https://drive.google.com/drive/folders/1_fx4sCES5sL1YeWEI0cSQd850j6Zhkre?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 5th Semester
           Courses</a>
       </tr>
       <tr>
@@ -80,7 +81,7 @@
           <div class="container">
 
             <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
-              <img src="../../images/Course-lists/S04 Course List.webp" alt="Codeforces Streams Page">
+              <img src="../../images/Course-lists/S05 Course List.webp" alt="Codeforces Streams Page">
               <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
           </div>
@@ -88,70 +89,52 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1ZR__njpWSwOeJNhgX1t5eWrIzfmoO0fI?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1j1Os8LHGAgfOl1gbJjiqWWy05kmsk4Mk?usp=drive_link"
             target="_blank" class="cell-link">
-            DSA 2
-            <br><small>CSE251 + CSE252</small>
+            AI
+            <br><small>CSE311 + CSE312</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1qnJrHU72Mub3gHfwcabIM6ySP14E-mt_?usp=drive_link"
-            target="_blank" class="cell-link">
-            Data Communication
-            <br><small>CSE253</small>
+          <a href="https://drive.google.com/drive/folders/1ziNG4HDSQVDz0gR8qU1OMbtVW8EPeVRM?usp=drive_link"
+            target="_blank" class="cell-link">CN
+            <br><small>CSE313 + CSE314</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1Lk_dkegB5YNBlQpYrOIcUP0KYS7e-oo0?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1jtW2uawqwRDNYpIz3CSYgpl6lID56N36?usp=drive_link"
             target="_blank" class="cell-link">
-            Theory of Computation
-            <br><small>CSE213</small>
+            DBMS
+            <br><small>CSE315 + CSE316</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1wFrG_OxI7-BzFHadiAX9aFJRPVH0_TgW?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1gLWZ6NISQQSZuagWmEJGT_fw9I4BQEXz?usp=drive_link"
             target="_blank" class="cell-link">
-            LAP&SE
-            <br><small> CSE217</small>
+            NMA
+            <br><small>CSE318</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1WVfboSGhSvmWjYBU23s2Bk79JX7SyoI2?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1-vcckXJirsjVUnA_BfztCVSKkKFSQnLx?usp=drive_link"
             target="_blank" class="cell-link">
-            CVFALT
-            <br><small> MAT265</small>
+            Computer Architecture
+            <br><small>CSE319</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/11hNDmHjWV1QPRzaQ6KWblWiUUKnPs5-0?usp=drive_link"
             target="_blank" class="cell-link">
-            Accounting
-            <br><small> GED113</small>
+            Advanced Problem Solving
+            <br><small> CSE204</small>
           </a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1yidd6DDh7Oy-D9DTHR3iQApWCXQ9lH39?usp=drive_link"
-            target="_blank" class="cell-link">
-            Internet Programming Lab
-            <br><small>CSE208</small>
-          </a>
-        </td>
-
-        <td style="background-color: #00000000;">
-          <!-- <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
-            target="_blank" class="cell-link">
-            Accounting
-            <br><small> GED113</small>
-          </a> -->
         </td>
       </tr>
     </table>
@@ -159,8 +142,8 @@
 
   <!-- <div align=center>
     <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
-  </div>
-   -->
+  </div> -->
+
   <br><br><br><br><br>
 
   <!-- HOME BUTTON -->
@@ -175,6 +158,7 @@
   <!-- BACK BUTTON -->
 
   <a href="javascript:history.back()" class="back-icon">&#8592;</a>
+
 
   <!-- -------------------------------------------------------------------- -->
 
