--- a/D1/S06.html
+++ b/D1/S06.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../css/styles.css">
-  <link rel="manifest" href="../../manifest.webmanifest">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="manifest" href="../manifest.webmanifest">
   <title>
-    UITS S07
+    UITS S06
   </title>
 </head>
 
@@ -72,8 +72,8 @@
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="https://drive.google.com/drive/folders/1_hTSpADeXWoHnm90pzbsO7lpZQKAlHkb?usp=drive_link"
-          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 7th
+        <a href="https://drive.google.com/drive/folders/1_jlvvJXUVnh0HDQp4VR-xhYtTHryj20C?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 6th
           Semester
           Courses</a>
       </tr>
@@ -82,7 +82,7 @@
           <div class="container">
 
             <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
-              <img src="../../images/Course-lists/S07 Course List.webp" alt="Codeforces Streams Page">
+              <img src="../../images/Course-lists/S06 Course List.webp" alt="Codeforces Streams Page">
               <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
           </div>
@@ -90,68 +90,53 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1C8j93IMJ7U6zUANlAH2nUeLhE12j5PYi?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1nPDQAnm5fQVTLOxGP7NqCOcSwGGd3Bem?usp=drive_link"
             target="_blank" class="cell-link">
-            Simulation and Modeling
-            <br><small>CSE413</small>
+            Compiler
+            <br><small>CSE351 + CSE352</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1HrgdXqI1i0iN6Wrh1JIWa7NUyTpeL30P?usp=drive_link"
-            target="_blank" class="cell-link">Scientific Research
-            <br><small>CSE418</small>
+          <a href="https://drive.google.com/drive/folders/1Sk3cJwYA0slESsWxa0Xvllerh40iTP-1?usp=drive_link"
+            target="_blank" class="cell-link">Software Engineering
+            <br><small>CSE355 + CSE356/small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1cF2I1OdDpi-TMSOnD8sMg7mUR3w4wgxp?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/138zkPmC6GXxJOPXdUb3zj4-tdqIT_ix9?usp=drive_link"
             target="_blank" class="cell-link">
-            Operating Systems
-            <br><small> CSE411 + CSE412</small>
+            Computer Graphics
+            <br><small>CSE357 + CSE358</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/13yd5bW_UjMYmY1aunmq6Nsp_nXnReAw1?usp=drive_link"
-            target="_blank" class="cell-link">Industrial Attachment
-            <br><small> CSE420</small>
+          <a href="https://drive.google.com/drive/folders/1snMh8qTLGLy5eqR5FBTVFhDAJYNITBqu?usp=drive_link"
+            target="_blank" class="cell-link">Microprocessors
+            <br><small>CSE359 + CSE360</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1BDXFHdEjoJEwyeGBkbbS2ZzNgJ9Zub-s?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1YstV74bC9Vy9VAkfCTpqILzA0jL2DYXd?usp=drive_link"
             target="_blank" class="cell-link">
-            Software Project Design
-            <br><small>CSE416</small>
+            I&OM
+            <br><small>GED 115</small>
           </a>
         </td>
 
-        <td>
-          <a href="https://drive.google.com/drive/folders/153HLCcu2Kt-3wU6z-f6ujmSQqX85H-R3?usp=drive_link"
-            target="_blank" class="cell-link">Capstone Project
-            <br><small> CSE490</small>
-          </a>
+        <td style="background-color: #00000000;">
+          <!-- <a href="https://drive.google.com/drive/folders/1snMh8qTLGLy5eqR5FBTVFhDAJYNITBqu?usp=drive_link"
+            target="_blank" class="cell-link">Microprocessors
+            <br><small>CSE359 + CSE360</small>
+          </a> -->
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1deGPqXj8JqS72dQt3EKi3KReVrdiL2df?usp=drive_link"
-            target="_blank" class="cell-link">
-            Internet of Things
-            <br><small> CSE401 + CSE402</small>
-          </a>
-        </td>
 
-        <td>
-          <a href="https://drive.google.com/drive/folders/1Hvv28jl20e9olD0ToWbsVkG5Cj3dnJog?usp=drive_link"
-            target="_blank" class="cell-link">Machine Learning
-            <br><small> CSE431 + CSE432</small>
-          </a>
-        </td>
-      </tr>
     </table>
   </div>
 
