--- a/References.html
+++ b/References.html
@@ -11,330 +11,7 @@
     <link rel="stylesheet" href="css/faq.dropdown.css">
     <link rel="stylesheet" href="css/faq.tooltip.css">
     <link rel="stylesheet" href="css/credit.css">
-    <style>
-        li {
-            padding: 5px;
-        }
-
-
-        body {
-            font-size: large;
-        }
-        /* HIDE SCROLLBAR */
-        ::-webkit-scrollbar {
-            display: none;
-        }
-    </style>
-    <style>
-        table,
-        th,
-        td {
-            border: 2px solid rgba(31, 106, 168, 0);
-            border-radius: 10px;
-        }
-
-        td {
-            min-width: 200px;
-        }
-
-        .parent-wrap {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            gap: 16px;
-            margin: auto;
-            width: 95%;
-            max-width: 500px;
-        }
-
-        .link-logo:hover {
-            transform: translateY(-5px);
-            transition: transform 1s
-        }
-
-        .container-6 {
-            display: grid;
-            place-items: center;
-            grid-template-columns: auto auto;
-            border-radius: 15px;
-            padding: 10px;
-            margin: 20px auto;
-            width: 79%;
-            max-width: 350px;
-            /*the button visibility*/
-            position: relative;
-            column-gap: 30px;
-            row-gap: 12%;
-
-        }
-
-        .container-6 a:hover {
-            transform: translateY(-5px);
-            transition: transform 1s
-        }
-
-        /* .container-6>div {
-            background-color: #f1f1f1;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 30px;
-            text-align: center;
-        }  */
-
-        .container-6>div>div {
-            background-color: #f1f1f1;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 30px;
-            text-align: center;
-            /* margin-top: 50px; */
-
-        }
-    </style>
-    <style>
-        .university-resources {
-            margin: 2rem auto;
-            max-width: 1200px;
-            padding: 0 1rem;
-        }
-
-        .table-title {
-            text-align: center;
-            color: #2c3e50;
-            margin-bottom: 1.5rem;
-            font-size: 1.5rem;
-        }
-
-        .table-container {
-            overflow-x: auto;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        table {
-            width: 80%;
-            border-collapse: collapse;
-            margin: 0;
-            padding: 0;
-            background-color: white;
-        }
-
-        th,
-        td {
-            padding: 1rem;
-            text-align: left;
-            border-bottom: 1px solid #e2e8f0;
-        }
-
-        th {
-            background-color: #f8fafc;
-            font-weight: 600;
-            color: #475569;
-            text-transform: uppercase;
-            font-size: 0.875rem;
-            letter-spacing: 0.05em;
-        }
-
-        td {
-            color: #1a202c;
-        }
-
-        tr:hover {
-            background-color: #f8fafc;
-
-        }
-
-        .link-group {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-        }
-
-        .link-group a {
-            color: #2563eb;
-            text-decoration: none;
-            display: inline-block;
-            transition: color 0.2s;
-        }
-
-        .link-group a:hover {
-            color: #1d4ed8;
-            text-decoration: underline;
-        }
-
-        .feature-list {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-
-            /* float: right; */
-            /* padding-right: 50%; */
-            /* max-width: 60%;
-            align-content: center; */
-        }
-
-        .feature-title {
-            font-weight: 600;
-            color: #475569;
-        }
-
-        .feature-list ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-        }
-
-        .feature-list li {
-            background-color: #f1f5f9;
-            padding: 0.25rem 0.75rem;
-            border-radius: 4px;
-            font-size: 0.875rem;
-            color: #475569;
-        }
-
-        @media (max-width: 800px) {
-            .table-container {
-                margin: 0 -1rem;
-                border-radius: 0;
-            }
-
-            th,
-            td {
-                padding: 0.75rem;
-            }
-
-            .feature-list ul {
-                flex-direction: column;
-            }
-        }
-
-        /* -------------------------------------------------------------- */
-
-        /* DROP DOWN FOR LIST */
-
-        /* * {
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        } */
-
-        /* body {
-            margin: 0;
-            padding: 20px;
-            background-color: #f5f5f5;
-        } */
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .dropdown-container {
-            margin-bottom: 15px;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .dropdown-header {
-            background-color: #4a89dc;
-            color: white;
-            padding: 15px 20px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-weight: bold;
-        }
-
-        .dropdown-header:hover {
-            background-color: #3b7dd8;
-        }
-
-        .dropdown-header::after {
-            content: "▼";
-            font-size: 12px;
-            transition: transform 0.3s ease;
-        }
-
-        .dropdown-header.active::after {
-            transform: rotate(180deg);
-        }
-
-        .dropdown-content-1 {
-            max-height: 0;
-            overflow: hidden;
-            background-color: white;
-            transition: max-height 0.3s ease;
-        }
-
-        .dropdown-content-1.show {
-            max-height: 500px;
-            /* Adjust as needed */
-        }
-
-        .dropdown-item {
-            padding: 15px 20px;
-            border-bottom: 1px solid #eaeaea;
-            display: block;
-            color: #333;
-            text-decoration: none;
-            transition: background-color 0.2s;
-        }
-
-        .dropdown-item:hover {
-            background-color: #BBE1FA;
-            color: #0F4C75;
-            border-radius: 20px;
-        }
-
-        .dropdown-item:last-child {
-            border-bottom: none;
-        }
-
-        .dropdown-item .description {
-            font-size: 14px;
-            color: #666;
-            margin-top: 5px;
-        }
-
-        /* Different colors for each category */
-        .resources .dropdown-header {
-            background-color: #4a89dc;
-        }
-
-        .resources .dropdown-header:hover {
-            background-color: #3b7dd8;
-        }
-
-        .courses .dropdown-header {
-            background-color: #3fc380;
-        }
-
-        .courses .dropdown-header:hover {
-            background-color: #36b173;
-        }
-
-        .tools .dropdown-header {
-            background-color: #e9573f;
-        }
-
-        .tools .dropdown-header:hover {
-            background-color: #d9422f;
-        }
-
-        .community .dropdown-header {
-            background-color: #967adc;
-        }
-
-        .community .dropdown-header:hover {
-            background-color: #8567d7;
-        }
-    </style>
+    <link rel="stylesheet" href="css/References.css">
 </head>
 
 <body style="background-color: #333;">
