--- a/D1/S02.html
+++ b/D1/S02.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../css/styles.css">
-  <link rel="manifest" href="../../manifest.webmanifest">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="manifest" href="../manifest.webmanifest">
   <title>
-    UITS S05
+    UITS S02
   </title>
 </head>
 
@@ -17,8 +17,8 @@
   <div class="topnav-1">
     <!-- APK LINK -->
     <!-- <div class="navigation1"
-            style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-        <script src="../../apk-link.js"></script> -->
+      style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+    <script src="../../apk-link.js"></script> -->
 
     <a class="active-1" href="../Tutorials.html">
       <small>Resources<br>Tutorials</small>
@@ -53,8 +53,6 @@
   <script src="../../js/navbar-drop-down.js"></script>
 
 
-
-
   <!-- BOTTOM BAR "navbar" -->
 
   <div style="padding-left:16px">
@@ -67,13 +65,13 @@
   </div>
   <!-- ----------------------------------------------------------------------- -->
 
-  <br>
 
+  <br>
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="https://drive.google.com/drive/folders/1_fx4sCES5sL1YeWEI0cSQd850j6Zhkre?usp=drive_link"
-          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 5th Semester
+        <a href="https://drive.google.com/drive/folders/1_bke5c5MMU2yEUCq1zhKyN9ARvaVhBwc?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 2nd Semester
           Courses</a>
       </tr>
       <tr>
@@ -81,7 +79,7 @@
           <div class="container">
 
             <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
-              <img src="../../images/Course-lists/S05 Course List.webp" alt="Codeforces Streams Page">
+              <img src="../../images/Course-lists/S02 Course List.webp" alt="Codeforces Streams Page">
               <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
           </div>
@@ -89,52 +87,63 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1j1Os8LHGAgfOl1gbJjiqWWy05kmsk4Mk?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1HHBBJDZDZ4IKwAzf9vKjfty97Uw4FjW6?usp=drive_link"
             target="_blank" class="cell-link">
-            AI
-            <br><small>CSE311 + CSE312</small>
+            OOP<br><small>CSE0613121 + CSE0613122</small>
           </a>
         </td>
 
+
         <td>
-          <a href="https://drive.google.com/drive/folders/1ziNG4HDSQVDz0gR8qU1OMbtVW8EPeVRM?usp=drive_link"
-            target="_blank" class="cell-link">CN
-            <br><small>CSE313 + CSE314</small>
+          <a href="https://drive.google.com/drive/folders/15DOOPBwkSfuimrrREW45jVcevx07-8nu?usp=drive_link"
+            target="_blank" class="cell-link">
+            Discrete Mathematics<br><small>CSE0541123</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1jtW2uawqwRDNYpIz3CSYgpl6lID56N36?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1_Zqg9MyV8XE0950vrqODdEVSlpYwnsZ-?usp=drive_link"
             target="_blank" class="cell-link">
-            DBMS
-            <br><small>CSE315 + CSE316</small>
+            OPDE <br><small>MATH0541121</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1gLWZ6NISQQSZuagWmEJGT_fw9I4BQEXz?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1WTnzJD1nXOM9IDU6bldtMWWA5plWfqTa?usp=drive_link"
             target="_blank" class="cell-link">
-            NMA
-            <br><small>CSE318</small>
+            FEE<br><small>EEE0713121 + EEE0713122</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1-vcckXJirsjVUnA_BfztCVSKkKFSQnLx?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1ymhnpGQEAJhGhGWDim-yGtrsj-vDG1-e?usp=drive_link"
             target="_blank" class="cell-link">
-            Computer Architecture
-            <br><small>CSE319</small>
+            Web Application Design<br><small>CSE0613124</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/11hNDmHjWV1QPRzaQ6KWblWiUUKnPs5-0?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1rkl0UWNfJUS3FUxvvKJLKuOUjihWYKc-?usp=drive_link"
             target="_blank" class="cell-link">
-            Advanced Problem Solving
-            <br><small> CSE204</small>
+            Engineering Drawing <br><small>ME0715122</small>
           </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1cbmYREhfX7_1VePKk-RPW26NCqbBrWYe?usp=drive_link"
+            target="_blank" class="cell-link">
+            Bangladesh Studies <br><small>GED0222121</small>
+          </a>
+        </td>
+
+        <td style="background-color: #00000000;">
+          <!-- <a href="https://drive.google.com/drive/folders/1rkl0UWNfJUS3FUxvvKJLKuOUjihWYKc-?usp=drive_link"
+            target="_blank" class="cell-link">
+            Engineering Drawing <br><small>ME0715122</small>
+          </a> -->
         </td>
       </tr>
     </table>
@@ -158,7 +167,6 @@
   <!-- BACK BUTTON -->
 
   <a href="javascript:history.back()" class="back-icon">&#8592;</a>
-
 
   <!-- -------------------------------------------------------------------- -->
 
