--- a/D1/S03.html
+++ b/D1/S03.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/styles.css">
-    <link rel="manifest" href="../../manifest.webmanifest">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="manifest" href="../manifest.webmanifest">
     <title>
         UITS S03
     </title>
