--- a/D1/S04.html
+++ b/D1/S04.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../css/styles.css">
-  <link rel="manifest" href="../../manifest.webmanifest">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="manifest" href="../manifest.webmanifest">
   <title>
-    UITS S06
+    UITS S04
   </title>
 </head>
 
@@ -17,8 +17,8 @@
   <div class="topnav-1">
     <!-- APK LINK -->
     <!-- <div class="navigation1"
-            style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-        <script src="../../apk-link.js"></script> -->
+      style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+    <script src="../../apk-link.js"></script> -->
 
     <a class="active-1" href="../Tutorials.html">
       <small>Resources<br>Tutorials</small>
@@ -54,7 +54,6 @@
 
 
 
-
   <!-- BOTTOM BAR "navbar" -->
 
   <div style="padding-left:16px">
@@ -68,12 +67,11 @@
   <!-- ----------------------------------------------------------------------- -->
 
   <br>
-
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="https://drive.google.com/drive/folders/1_jlvvJXUVnh0HDQp4VR-xhYtTHryj20C?usp=drive_link"
-          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 6th
+        <a href="https://drive.google.com/drive/folders/1_ihH9qW1qBSPKn_cHzf6w6cRUcYEE3Zr?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 4th
           Semester
           Courses</a>
       </tr>
@@ -82,7 +80,7 @@
           <div class="container">
 
             <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
-              <img src="../../images/Course-lists/S06 Course List.webp" alt="Codeforces Streams Page">
+              <img src="../../images/Course-lists/S04 Course List.webp" alt="Codeforces Streams Page">
               <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
           </div>
@@ -90,60 +88,79 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1nPDQAnm5fQVTLOxGP7NqCOcSwGGd3Bem?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1ZR__njpWSwOeJNhgX1t5eWrIzfmoO0fI?usp=drive_link"
             target="_blank" class="cell-link">
-            Compiler
-            <br><small>CSE351 + CSE352</small>
+            DSA 2
+            <br><small>CSE251 + CSE252</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1Sk3cJwYA0slESsWxa0Xvllerh40iTP-1?usp=drive_link"
-            target="_blank" class="cell-link">Software Engineering
-            <br><small>CSE355 + CSE356/small>
+          <a href="https://drive.google.com/drive/folders/1qnJrHU72Mub3gHfwcabIM6ySP14E-mt_?usp=drive_link"
+            target="_blank" class="cell-link">
+            Data Communication
+            <br><small>CSE253</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/138zkPmC6GXxJOPXdUb3zj4-tdqIT_ix9?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1Lk_dkegB5YNBlQpYrOIcUP0KYS7e-oo0?usp=drive_link"
             target="_blank" class="cell-link">
-            Computer Graphics
-            <br><small>CSE357 + CSE358</small>
+            Theory of Computation
+            <br><small>CSE213</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1snMh8qTLGLy5eqR5FBTVFhDAJYNITBqu?usp=drive_link"
-            target="_blank" class="cell-link">Microprocessors
-            <br><small>CSE359 + CSE360</small>
+          <a href="https://drive.google.com/drive/folders/1wFrG_OxI7-BzFHadiAX9aFJRPVH0_TgW?usp=drive_link"
+            target="_blank" class="cell-link">
+            LAP&SE
+            <br><small> CSE217</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1YstV74bC9Vy9VAkfCTpqILzA0jL2DYXd?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1WVfboSGhSvmWjYBU23s2Bk79JX7SyoI2?usp=drive_link"
             target="_blank" class="cell-link">
-            I&OM
-            <br><small>GED 115</small>
+            CVFALT
+            <br><small> MAT265</small>
+          </a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
+            target="_blank" class="cell-link">
+            Accounting
+            <br><small> GED113</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1yidd6DDh7Oy-D9DTHR3iQApWCXQ9lH39?usp=drive_link"
+            target="_blank" class="cell-link">
+            Internet Programming Lab
+            <br><small>CSE208</small>
           </a>
         </td>
 
         <td style="background-color: #00000000;">
-          <!-- <a href="https://drive.google.com/drive/folders/1snMh8qTLGLy5eqR5FBTVFhDAJYNITBqu?usp=drive_link"
-            target="_blank" class="cell-link">Microprocessors
-            <br><small>CSE359 + CSE360</small>
+          <!-- <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
+            target="_blank" class="cell-link">
+            Accounting
+            <br><small> GED113</small>
           </a> -->
         </td>
       </tr>
-
     </table>
   </div>
 
   <!-- <div align=center>
     <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
-  </div> -->
-
+  </div>
+   -->
   <br><br><br><br><br>
 
   <!-- HOME BUTTON -->
