--- a/D1/S07.html
+++ b/D1/S07.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../css/styles.css">
-  <link rel="manifest" href="../../manifest.webmanifest">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="manifest" href="../manifest.webmanifest">
   <title>
-    UITS S02
+    UITS S07
   </title>
 </head>
 
@@ -17,8 +17,8 @@
   <div class="topnav-1">
     <!-- APK LINK -->
     <!-- <div class="navigation1"
-      style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-    <script src="../../apk-link.js"></script> -->
+            style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+        <script src="../../apk-link.js"></script> -->
 
     <a class="active-1" href="../Tutorials.html">
       <small>Resources<br>Tutorials</small>
@@ -53,6 +53,8 @@
   <script src="../../js/navbar-drop-down.js"></script>
 
 
+
+
   <!-- BOTTOM BAR "navbar" -->
 
   <div style="padding-left:16px">
@@ -65,13 +67,14 @@
   </div>
   <!-- ----------------------------------------------------------------------- -->
 
-
   <br>
+
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="https://drive.google.com/drive/folders/1_bke5c5MMU2yEUCq1zhKyN9ARvaVhBwc?usp=drive_link"
-          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 2nd Semester
+        <a href="https://drive.google.com/drive/folders/1_hTSpADeXWoHnm90pzbsO7lpZQKAlHkb?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">🔗 7th
+          Semester
           Courses</a>
       </tr>
       <tr>
@@ -79,7 +82,7 @@
           <div class="container">
 
             <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
-              <img src="../../images/Course-lists/S02 Course List.webp" alt="Codeforces Streams Page">
+              <img src="../../images/Course-lists/S07 Course List.webp" alt="Codeforces Streams Page">
               <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
           </div>
@@ -87,63 +90,66 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1HHBBJDZDZ4IKwAzf9vKjfty97Uw4FjW6?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1C8j93IMJ7U6zUANlAH2nUeLhE12j5PYi?usp=drive_link"
             target="_blank" class="cell-link">
-            OOP<br><small>CSE0613121 + CSE0613122</small>
+            Simulation and Modeling
+            <br><small>CSE413</small>
           </a>
         </td>
 
-
         <td>
-          <a href="https://drive.google.com/drive/folders/15DOOPBwkSfuimrrREW45jVcevx07-8nu?usp=drive_link"
-            target="_blank" class="cell-link">
-            Discrete Mathematics<br><small>CSE0541123</small>
+          <a href="https://drive.google.com/drive/folders/1HrgdXqI1i0iN6Wrh1JIWa7NUyTpeL30P?usp=drive_link"
+            target="_blank" class="cell-link">Scientific Research
+            <br><small>CSE418</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1_Zqg9MyV8XE0950vrqODdEVSlpYwnsZ-?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1cF2I1OdDpi-TMSOnD8sMg7mUR3w4wgxp?usp=drive_link"
             target="_blank" class="cell-link">
-            OPDE <br><small>MATH0541121</small>
+            Operating Systems
+            <br><small> CSE411 + CSE412</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1WTnzJD1nXOM9IDU6bldtMWWA5plWfqTa?usp=drive_link"
-            target="_blank" class="cell-link">
-            FEE<br><small>EEE0713121 + EEE0713122</small>
+          <a href="https://drive.google.com/drive/folders/13yd5bW_UjMYmY1aunmq6Nsp_nXnReAw1?usp=drive_link"
+            target="_blank" class="cell-link">Industrial Attachment
+            <br><small> CSE420</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1ymhnpGQEAJhGhGWDim-yGtrsj-vDG1-e?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1BDXFHdEjoJEwyeGBkbbS2ZzNgJ9Zub-s?usp=drive_link"
             target="_blank" class="cell-link">
-            Web Application Design<br><small>CSE0613124</small>
+            Software Project Design
+            <br><small>CSE416</small>
           </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1rkl0UWNfJUS3FUxvvKJLKuOUjihWYKc-?usp=drive_link"
-            target="_blank" class="cell-link">
-            Engineering Drawing <br><small>ME0715122</small>
+          <a href="https://drive.google.com/drive/folders/153HLCcu2Kt-3wU6z-f6ujmSQqX85H-R3?usp=drive_link"
+            target="_blank" class="cell-link">Capstone Project
+            <br><small> CSE490</small>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1cbmYREhfX7_1VePKk-RPW26NCqbBrWYe?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1deGPqXj8JqS72dQt3EKi3KReVrdiL2df?usp=drive_link"
             target="_blank" class="cell-link">
-            Bangladesh Studies <br><small>GED0222121</small>
+            Internet of Things
+            <br><small> CSE401 + CSE402</small>
           </a>
         </td>
 
-        <td style="background-color: #00000000;">
-          <!-- <a href="https://drive.google.com/drive/folders/1rkl0UWNfJUS3FUxvvKJLKuOUjihWYKc-?usp=drive_link"
-            target="_blank" class="cell-link">
-            Engineering Drawing <br><small>ME0715122</small>
-          </a> -->
+        <td>
+          <a href="https://drive.google.com/drive/folders/1Hvv28jl20e9olD0ToWbsVkG5Cj3dnJog?usp=drive_link"
+            target="_blank" class="cell-link">Machine Learning
+            <br><small> CSE431 + CSE432</small>
+          </a>
         </td>
       </tr>
     </table>
