--- a/Extracurriculars.html
+++ b/Extracurriculars.html
@@ -96,8 +96,14 @@
 </head>
 
 <body style="background-color: #333;">
+    <div style="background-color: #333;display: block;width: 100%;height: 20px;position: fixed;top:0;z-index: 999;">
+    </div>
+
     <div
         style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
+
+
+
         <nav class="navbar">
             <div class="nav-container">
                 <ul class="nav-links">
@@ -112,7 +118,7 @@
         </nav>
         <br><br><br>
 
-    
+
 
         <p class="highlights-5" align="center"
             style="color: rgba(0, 0, 0, 0.649);margin-bottom: -5px;margin-top: 15px;">
@@ -392,7 +398,7 @@
 
         <!-- BLOGGER IFRAME -->
 
-        <table  style="width:90%; max-width:700px; min-width:300px;border-color: #00000000;margin: auto;">
+        <table style="width:90%; max-width:700px; min-width:300px;border-color: #00000000;margin: auto;">
             <tr>
                 <th>
 
@@ -400,7 +406,9 @@
 
                     <div class="topnav-3">
                         <h3>
-                            <p align=center style="color:rgba(255, 255, 255, 0.776);padding-top: 15px;"><i>b1tranger</i>'s blog</p>
+                            <p align=center style="color:rgba(255, 255, 255, 0.776);padding-top: 15px;">
+                                <i>b1tranger</i>'s blog
+                            </p>
                         </h3>
                     </div>
 
@@ -581,74 +589,74 @@
                 }
             });
         </script>
-    
 
-    <!-- ---------------------------------------------------------- -->
 
-    <br><br><br> <br><br><br>
-    <br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br>
-    <!-- END CREDIT  -->
-    <div align="center">
-        <div>
-            <!-- SOCIAL LINKS -->
+        <!-- ---------------------------------------------------------- -->
 
-            <p align=center style="color: #00000086;">Join our Socials </p>
-            <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for Updates and
-                    Feedback</i>
-            </p>
+        <br><br><br> <br><br><br>
+        <br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br>
+        <!-- END CREDIT  -->
+        <div align="center">
+            <div>
+                <!-- SOCIAL LINKS -->
 
-            <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\Social-logo\discord-logo.webp
-                    alt="Discord Server (Protein Shake)" width="70" height="70"></a>
+                <p align=center style="color: #00000086;">Join our Socials </p>
+                <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for Updates and
+                        Feedback</i>
+                </p>
 
-            <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\Social-logo\telegram-logo2.webp
-                    alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
+                <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\Social-logo\discord-logo.webp
+                        alt="Discord Server (Protein Shake)" width="70" height="70"></a>
 
-            <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img
-                    src=images\Social-logo\fb-logo.webp alt="Facebook Group (oUITS - Online Resources)" width="70"
-                    height="70"></a>
+                <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\Social-logo\telegram-logo2.webp
+                        alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
 
-            <a href="https://github.com/oU1TS" target="_blank"><img src=images\Social-logo\github-logo2.webp
-                    alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
+                <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img
+                        src=images\Social-logo\fb-logo.webp alt="Facebook Group (oUITS - Online Resources)" width="70"
+                        height="70"></a>
 
+                <a href="https://github.com/oU1TS" target="_blank"><img src=images\Social-logo\github-logo2.webp
+                        alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
+
+            </div>
+
+
+
+            <p align=center
+                style="color:rgba(0, 0, 0, 0.422);width: 95%;max-width:500px;font-size: small;font-style: italic;">
+                Copyright
+                &copy; 2024-<span id="year"></span>
+                b1tranger. </p>
+
+
+
+            <div style="margin-bottom: 20px;margin-top: 10px;">
+                <!-- BOTTOM CREDITS -->
+                <p align=center style="color:rgba(0, 0, 0, 0.422);width: 80%;max-width:550px;font-size: small;"><small
+                        style="font-size: x-small;"><b>UNOFFICIAL</b>
+                        Online
+                        Resources Archiver for UITS<br>This project is licensed under the <a
+                            href="https://www.apache.org/licenses/LICENSE-2.0" style="color:rgba(4, 0, 128, 0.806);"
+                            target="_blank">Apache License 2.0</a>.
+                        You may use, modify, and distribute its contents, but you must provide attribution and include
+                        the
+                        original
+                        license.</small></p>
+
+
+                <script>
+                    document.getElementById("year").textContent = new Date().getFullYear();
+                </script>
+            </div>
         </div>
-
-
-
-        <p align=center
-            style="color:rgba(0, 0, 0, 0.422);width: 95%;max-width:500px;font-size: small;font-style: italic;">
-            Copyright
-            &copy; 2024-<span id="year"></span>
-            b1tranger. </p>
-
-
-
-        <div style="margin-bottom: 20px;margin-top: 10px;">
-            <!-- BOTTOM CREDITS -->
-            <p align=center style="color:rgba(0, 0, 0, 0.422);width: 80%;max-width:550px;font-size: small;"><small
-                    style="font-size: x-small;"><b>UNOFFICIAL</b>
-                    Online
-                    Resources Archiver for UITS<br>This project is licensed under the <a
-                        href="https://www.apache.org/licenses/LICENSE-2.0" style="color:rgba(4, 0, 128, 0.806);"
-                        target="_blank">Apache License 2.0</a>.
-                    You may use, modify, and distribute its contents, but you must provide attribution and include
-                    the
-                    original
-                    license.</small></p>
-
-
-            <script>
-                document.getElementById("year").textContent = new Date().getFullYear();
-            </script>
-        </div>
-    </div>
-    <br>
-    <br>
+        <br>
+        <br>
     </div>
     <div class="navbar-5">
         <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
