--- a/index.html
+++ b/index.html
@@ -120,12 +120,10 @@
 
 <body style="background-color: #333;z-index: 2;">
 
- 
-  <!-- <div  style="background-color: #333;"> -->
+  <div style="background-color: #333;display: block;width: 100%;height: 20px;position: fixed;top:0;z-index: 999;">
+  </div>
   <div
     style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
-
-
 
 
     <!-- TOP BAR -->
@@ -160,7 +158,7 @@
 
     <!-- <h1 align="center">oUITS-Resources</h1> -->
 
-    <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-top: 150px;">
+    <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-top: 15px;">
       <i>Browse resources for UITS Students</i>
       <br>
       <small style="font-size: small;">[mirror: <a href="https://ouits-res.netlify.app/"
@@ -203,28 +201,29 @@
     </div>
 
 
-<div class="topnav-2" style="margin: auto;margin-bottom: 50px;">
-        <div class="dropdown">
-          <button class="dropbtn" onclick="toggleDropdown(this)"
-            style="background-color: rgba(87, 165, 142, 0.521);width: 200px;padding: 15px;border-radius: 10px;color: black;border: 1px solid black;box-shadow: 1px 1px 10px;">More Projects</button>
-          <div class="dropdown-content">
-            <div class="navigation1"></div>
-            <script src="js\Links\drop-link-01.js"></script>
+    <div class="topnav-2" style="margin: auto;margin-bottom: 50px;">
+      <div class="dropdown">
+        <button class="dropbtn" onclick="toggleDropdown(this)"
+          style="background-color: rgba(87, 165, 142, 0.521);width: 200px;padding: 15px;border-radius: 10px;color: black;border: 1px solid black;box-shadow: 1px 1px 10px;">More
+          Projects</button>
+        <div class="dropdown-content">
+          <div class="navigation1"></div>
+          <script src="js\Links\drop-link-01.js"></script>
 
-            <div class="navigation2"></div>
-            <script src="js\Links\drop-link-02.js"></script>
+          <div class="navigation2"></div>
+          <script src="js\Links\drop-link-02.js"></script>
 
-            <div class="navigation3"></div>
-            <script src="js\Links\drop-link-03.js"></script>
+          <div class="navigation3"></div>
+          <script src="js\Links\drop-link-03.js"></script>
 
-            <div class="navigation4"></div>
-            <script src="js\Links\drop-link-04.js"></script>
+          <div class="navigation4"></div>
+          <script src="js\Links\drop-link-04.js"></script>
 
-            <div class="navigation5"></div>
-            <script src="js\Links\drop-link-99.js"></script>
-          </div>
+          <div class="navigation5"></div>
+          <script src="js\Links\drop-link-99.js"></script>
         </div>
       </div>
+    </div>
 
     <!-- ---------------------------------------------------- -->
 
@@ -302,10 +301,10 @@
         </div>
       </div>
 
-     
 
 
-      
+
+
 
 
 
@@ -402,7 +401,6 @@
 
 
     </div>
-
     <div class="navbar-5">
       <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
       </font>
