--- a/Academics.html
+++ b/Academics.html
@@ -19,16 +19,15 @@
 
 <body style="background-color: #333;">
 
-    <!-- <div style="background-color: #333;">
-<hr>
-    </div> -->
+    <div style="background-color: #333;display: block;width: 100%;height: 20px;position: fixed;top:0;z-index: 999;">
+    </div>
     <div
         style="background-color: #FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;z-index: 99999;">
 
         <nav class="navbar">
-            <div id="nav-container" class="">
-               
-            <!-- <div class="nav-container"> -->
+            <!-- <div id="nav-container" > -->
+
+            <div class="nav-container">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#" class="active">Academics</a></li>
@@ -39,24 +38,24 @@
                 </ul>
             </div>
         </nav>
-         <script>
-            window.addEventListener('scroll',function(){
+        <script>
+            window.addEventListener('scroll', function () {
                 const navHide = document.getElementById('nav-container');
-                if(window.scrollY > 0){
+                if (window.scrollY > 0) {
                     nav.classList.add('scrolled');
                 }
-                else{
+                else {
                     nav.classList.remove('scrolled');
                 }
             });
 
-         </script>
+        </script>
 
         <!-- <ul>
             <li><a href="page-depth-01/General-Info.html">General-Info.html</a></li>
             <li><a href="page-depth-01/Semesters.html">Semesters.html</a></li>
         </ul> -->
-<br><br><br><br><br><br>
+        <br><br><br><br><br><br>
 
         <div id="upload-section" class="container-5"
             style="border-radius: 15px;background-color: #1B262C;margin-top: 25px;margin: auto;">
