--- a/References.html
+++ b/References.html
@@ -16,7 +16,8 @@
 </head>
 
 <body style="background-color: #333;">
-    
+    <div style="background-color: #333;display: block;width: 100%;height: 20px;position: fixed;top:0;z-index: 999;">
+    </div>
     <div
         style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
         <nav class="navbar">
